tests/paczka1/small_fuzzy/39973685.err
Error in line 4: mF6hxovKS6 S926 92,6
Error in line 3: aA2YtsgD S342 23,7
Error in line 5: mF6hxovKS6 S342 42,9
